# iocseek

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  iocseek.py
bad/: summary.md
config/: config.yml
input/: config.yaml  summary.md
input/rules/: snort.rules
input/sigma/: sigma.yml
input/stix/: stix.json
input/yara/: yara.yar
output/: iocseek_result.yaml  results.yml
src/: main.rs
test/: integration_test.rs
